<resources>
    <string name="app_name" translatable="false">LEARN IT</string>
    <string name="edtUsername">Username</string>
    <string name="edtPassword" translatable="false">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnSignUp">Login</string>
    <string name="txtCreateUser">Create user</string>
    <string name="txtUsernameCreate">Username:</string>
    <string name="txtPasswordRepeat">Repeat password </string>
    <string name="btnSearch">Search</string>
    <string name="btnCreateQuiz">Create quiz</string>
    <string name="txtQuizName">Quiz name</string>
    <string name="btnAdd">Add</string>
    <string name="btnSearchConfirm">Search</string>
    <string name="btnPlay">Play</string>
    <string name="btnShare">Share</string>
    <string name="btnMakePrivate">Make Private</string>
    <string name="btnFollow">Follow</string>
    <string name="btnUnfollow">Unfollow</string>
    <string name="txtTitleSingleQuizView">Quiz Title</string>
    <string name="btnEditSingleQuiz">Edit</string>
    <string name="txtQuestionThumbnailMissing">No question thumbnail text</string>
    <string name="txtEditImage">Edit image URL:</string>
    <string name="txtEditQuestionTitle">Edit Question:</string>
    <string name="hintEditImageURL">Image URL</string>
    <string name="hintEditQuestionText">Question text</string>
    <string name="hintEditAnswerText">Answer text</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnSave">Save</string>
    <string name="btnDelete">Delete</string>
    <string name="btnExitPlay">Exit</string>
    <string name="txtQuestionText">This question has no text.</string>
    <string name="btnPlayAnswer">Answer</string>
    <string name="hintPlayAnswer">Enter answer</string>
    <string name="btnPlaySkip">Skip</string>
    <string name="btnPlayLess">Less</string>
    <string name="btnPlayMore">More</string>
    <string name="txtSingleQuizOwnerPrefix">By</string>
    <string name="btnBack">Back</string>
    <string name="btnNew">New</string>
</resources>