<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.SignUpActivity">

    <TextView
        android:id="@+id/txtCreateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txtCreateUser"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtUsernameCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/txtUsernameCreate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCreateUser" />

    <EditText
        android:id="@+id/edtUsernameCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edtUsername"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txtUsernameCreate"
        app:layout_constraintTop_toBottomOf="@+id/txtUsernameCreate" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/edtPassword"
        app:layout_constraintStart_toStartOf="@+id/edtUsernameCreate"
        app:layout_constraintTop_toBottomOf="@+id/edtUsernameCreate" />

    <EditText
        android:id="@+id/edtPasswordCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edtPassword"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/txtPasswordRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txtPasswordRepeat"
        app:layout_constraintStart_toStartOf="@+id/edtPasswordCreate"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordCreate" />

    <EditText
        android:id="@+id/edtPasswordRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edtPassword"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/txtPasswordRepeat"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordRepeat" />

    <Button
        android:id="@+id/btnCreateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordRepeat" />

    <Button
        android:id="@+id/btnBackSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btnBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>